Latest Blender from master/buildbot Crash with many of my scenes (Cycles) #50886

Closed
opened 2017-03-08 04:50:29 +01:00 by YAFU · 6 comments

System Information
Kubuntu 14.04 (Linux) - GTX 960

Blender Version
Broken: 9e566b06e3 (blender-2.78-9e566b06e3-linux-glibc219-x86_64), Master

Short description of error
Blender crash (segmentation fault) a lot with many of my scenes when Render > Render image. This works well in rendered view.
Here is a simple example:
crash_2.blend

Generated crash log:
http://pasteall.org/285103

Exact steps for others to reproduce the error
Open the .blend file.
Render > Render image.
Blender crash

**System Information** Kubuntu 14.04 (Linux) - GTX 960 **Blender Version** Broken: 9e566b06e3 (blender-2.78-9e566b06e3-linux-glibc219-x86_64), Master **Short description of error** Blender crash (segmentation fault) a lot with many of my scenes when Render > Render image. This works well in rendered view. Here is a simple example: [crash_2.blend](https://archive.blender.org/developer/F505218/crash_2.blend) Generated crash log: http://pasteall.org/285103 **Exact steps for others to reproduce the error** Open the .blend file. Render > Render image. Blender crash
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

#50883 was marked as duplicate of this issue

#50883 was marked as duplicate of this issue
Member

Added subscribers: @SteffenD, @LazyDodo, @Sergey, @LukasStockner

Added subscribers: @SteffenD, @LazyDodo, @Sergey, @LukasStockner

This issue was referenced by a095611eb8

This issue was referenced by a095611eb87b5147e27da2b94463b0329c0a947e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50886
No description provided.